# Shared-Medications-Record

./: README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
docs/: about.md  index.md  license.md  models.md
docs/About/: about.md
docs/Examples/: api-examples-overview.md
docs/Models/: 1 Overview.md
docs/api-examples/: api-examples-overview.md  create-patient.md  search-patient-record.md
docs/reference/: eDMR-developments.pptx
docs/stylesheets/: extra.css
local/: NWIS DAL Medication Order.v0 -copy.t.json
models/: TEMP-Discontinued Medication.t.json  TEMP-XDS Metadata.t.json
models/local/: COMPOSITION-CCCR_Medication_statement-v1.t.json  COMPOSITION-NWIS_Chemotherapy_list-v0.t.json  IDCR - Medication Statement List.v1.t.json  NWIS -DAL-Admission_Medicines_Reconciliation_v.0.t.json  openEHR-EHR-CLUSTER.medication.v0.adl  openEHR-EHR-CLUSTER.medication_reconciliation_admit_uk.v1.adl  openEHR-EHR-CLUSTER.problem_qualifier.v1.adl  openEHR-EHR-CLUSTER.timing_daily.v1.adl  openEHR-EHR-COMPOSITION.medication_list.v0.adl  openEHR-EHR-COMPOSITION.medication_list.v1.adl  openEHR-EHR-INSTRUCTION.medication_order.v2.adl  openEHR-EHR-SECTION.medication_medical_devices_rcp.v1.adl  openEHR-EHR-SECTION.problems_and_diagnoses.v1.adl
models/local/archetypes/: openEHR-EHR-ACTION.care_plan_uk.v0.adl  openEHR-EHR-ACTION.medication.v1.adl  openEHR-EHR-ACTION.medication_supply_uk.v1.adl  openEHR-EHR-ACTION.procedure.v1.adl  (+30 more)
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/models/: index.html
site/search/: search_index.json
(+9 files in other folders)
